--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -21,6 +21,7 @@
 
         <script src="js/angular.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/Services/Constants.js"></script>
         <script src="js/Controllers/LogoutController.js"></script>
         <script src="js/Controllers/TitleController.js"></script>
         <script src="js/Controllers/ProfileController.js"></script>
