--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -22,6 +22,7 @@
         <script src="js/angular.js"></script>
         <script src="js/app.js"></script>
         <script src="js/Services/Constants.js"></script>
+        <script src="js/Services/SharedData.js"></script>
         <script src="js/Directives/FileRead.js"></script>
         <script src="js/Controllers/LogoutController.js"></script>
         <script src="js/Controllers/TitleController.js"></script>
