Finalne provere funkcionalnosti, i prepravke

--- a/SpajalicaFrontEnd/pages/SearchPage.html
+++ b/SpajalicaFrontEnd/pages/SearchPage.html
@@ -48,8 +48,12 @@
             <h6>Датум приступа: {{searchedUser.joinedDate}}</h6>
             <h6>Пол: {{searchedUser.sex}}</h6>
             <h6>Место: {{searchedUser.location}}</h6>
-            <h6>{{searchedUser.profilePicture}}</h6>
             <h6>Статус везе: {{searchedUser.relationshipStatus}}</h6>
+        </div>
+        <div class="btn-group" role="group" style="text-align:center">
+            <img class="profile-pic"
+                 ng-src="{{searchedUser.convertString}} {{searchedUser.profilePicture}}"
+                 style="margin: auto"/>
         </div>
         <div class="btn-group btn-group-vertical" role="group">
             <div class="btn-group" role="group">
@@ -77,8 +81,12 @@
             <h6>Датум приступа: {{searchedUser.joinedDate}}</h6>
             <h6>Пол: {{searchedUser.sex}}</h6>
             <h6>Место: {{searchedUser.location}}</h6>
-            <h6>{{searchedUser.profilePicture}}</h6>
             <h6>Статус везе: {{searchedUser.relationshipStatus}}</h6>
+        </div>
+        <div class="btn-group" role="group" style="text-align:center">
+            <img class="profile-pic"
+                 ng-src="{{searchedUser.convertString}} {{searchedUser.profilePicture}}"
+                 style="margin: auto"/>
         </div>
         <div class="btn-group btn-group-vertical" role="group">
             <div class="btn-group" role="group">
@@ -101,8 +109,12 @@
             <h6>Датум приступа: {{searchedUser.joinedDate}}</h6>
             <h6>Пол: {{searchedUser.sex}}</h6>
             <h6>Место: {{searchedUser.location}}</h6>
-            <h6>{{searchedUser.profilePicture}}</h6>
             <h6>Статус везе: {{searchedUser.relationshipStatus}}</h6>
+        </div>
+        <div class="btn-group" role="group" style="text-align:center">
+            <img class="profile-pic"
+                 ng-src="{{searchedUser.convertString}} {{searchedUser.profilePicture}}"
+                 style="margin: auto"/>
         </div>
         <div class="btn-group btn-group-vertical" role="group">
             <div class="btn-group" role="group">
