--- a/SpajalicaFrontEnd/pages/ProfilePage.html
+++ b/SpajalicaFrontEnd/pages/ProfilePage.html
@@ -1,7 +1,7 @@
 <div class="col-sm-12 col-md-12 col-lg-12">
     <div class="row">
         <div class="col-xs-6">
-            <img id="profile-pic" ng-src="{{convertString}} {{profilePicture}}"/>
+            <img class="profile-pic" ng-src="{{convertString}} {{profilePicture}}"/>
         </div>
         <div class="col-xs-6">
             <h2>Корисник: {{nickname}}</h2>
