Started implementing transition to AngularJS from jQuery. Added CreateDB script, since we won't change DB any time soon.

--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -23,6 +23,7 @@
         <script src="js/app.js"></script>
         <script src="js/Services/Constants.js"></script>
         <script src="js/Services/SharedData.js"></script>
+        <!--<script src="js/Directives/LoadIndex.js"></script>-->
         <script src="js/Directives/FileRead.js"></script>
         <script src="js/Controllers/LogoutController.js"></script>
         <script src="js/Controllers/TitleController.js"></script>
